Update package.json with new return structure

--- a/bahamasair-baggage-report-starter-with-logo/package.json
+++ b/bahamasair-baggage-report-starter-with-logo/package.json
@@ -8,3 +8,8 @@
     "aws-lambda-multipart-parser": "^0.1.2"
   }
 }
+return {
+  statusCode: 200,
+  headers: { "content-type": "application/json" },
+  body: JSON.stringify({ status: "ok", caseId })
+};
